@@ -17,7 +17,7 @@ $cmd->stderr_is_eq("");
 {
 my $cmd = Test::Command->new(cmd => "fping -v");
 $cmd->exit_is_num(0);
-$cmd->stdout_like(qr{ping: Version 3\.\d+
+$cmd->stdout_like(qr{ping: Version 3\.\d+(-rc\d+)?
 fping: comments to david\@schweikert\.ch
 });
 $cmd->stderr_is_eq("");
